# Pieskieo

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: release-binaries.yml
crates/kaededb-core/: Cargo.toml
crates/kaededb-core/src/: engine.rs  error.rs  graph.rs  lib.rs  vector.rs  wal.rs
crates/kaededb-server/: Cargo.toml
crates/kaededb-server/src/: main.rs
crates/pieskieo-cli/: Cargo.toml
crates/pieskieo-cli/src/: main.rs
crates/pieskieo-core/src/: engine.rs  error.rs  graph.rs  lib.rs  wal.rs
crates/pieskieo-server/: Cargo.toml
crates/pieskieo-server/src/: lib.rs  main.rs
install/: README.md  get-pieskieo.ps1  get-pieskieo.sh  install.ps1  install.sh
knowledge/: AGENT.md  PLAN_REVISION_SUMMARY.md  PLAN_REVISION_TRACKER.md  USER_VISION.md
plans/: MASTER_INDEX.md  PLANNING_PROGRESS.md  PLANNING_STRATEGY.md  STATUS.md
plans/core-features/: UNIFIED_QUERY_LANGUAGE.md
plans/lancedb/: 01-lance-format.md  06-time-travel.md
plans/mongodb/: 01-update-operators.md  08-group.md  10-lookup.md  AGGREGATION_PIPELINE.md
plans/postgresql/: 01-subqueries.md  02-ctes.md  03-window-functions.md  04-joins.md  05-acid.md  06-isolation.md  07-savepoints.md  08-deadlock-detection.md  09-foreign-keys.md  10-unique-constraints.md  13-sequences.md  15-btree-indexes.md  16-gin-indexes.md  17-gist-indexes.md  26-json.md  27-fulltext.md
plans/weaviate/: 04-bm25.md  05-hybrid-fusion.md
sdk/pieskieo/: README.md  pyproject.toml
sdk/pieskieo/pieskieo/: __init__.py  async_client.py  client.py  models.py
target_cli_tmp/: .rustc_info.json
target_cli_tmp/debug/.fingerprint/bytes-2d309ef858864c61/: lib-bytes  lib-bytes.json
target_cli_tmp/debug/.fingerprint/cc-89485c61bd737ec1/: lib-cc  lib-cc.json
target_cli_tmp/debug/.fingerprint/cfg-if-2e79846c478e3a52/: lib-cfg_if  lib-cfg_if.json
target_cli_tmp/debug/.fingerprint/find-msvc-tools-824453f8ff6e9e96/: lib-find_msvc_tools  lib-find_msvc_tools.json
target_cli_tmp/debug/.fingerprint/futures-channel-1f88647e0777fd8e/: lib-futures_channel  lib-futures_channel.json
target_cli_tmp/debug/.fingerprint/futures-core-764581b4d26fcccb/: lib-futures_core  lib-futures_core.json
target_cli_tmp/debug/.fingerprint/futures-io-3a2e8384da751410/: lib-futures_io  lib-futures_io.json
target_cli_tmp/debug/.fingerprint/futures-sink-217602565b8f84b4/: lib-futures_sink  lib-futures_sink.json
target_cli_tmp/debug/.fingerprint/futures-task-5db84ba3107a2f44/: lib-futures_task  lib-futures_task.json
target_cli_tmp/debug/.fingerprint/generic-array-4ed583dd7826005c/: build-script-build-script-build  build-script-build-script-build.json
target_cli_tmp/debug/.fingerprint/getrandom-7ae16b5b8bdf481c/: lib-getrandom  lib-getrandom.json
target_cli_tmp/debug/.fingerprint/httparse-ec45ea682289032d/: build-script-build-script-build  build-script-build-script-build.json
target_cli_tmp/debug/.fingerprint/itoa-4ff1cd40b2b6067b/: lib-itoa  lib-itoa.json
target_cli_tmp/debug/.fingerprint/lock_api-26ed790c7300f200/: lib-lock_api  lib-lock_api.json
target_cli_tmp/debug/.fingerprint/log-9c68ee389656bf90/: lib-log  lib-log.json
target_cli_tmp/debug/.fingerprint/memchr-b7307ca7b20591c9/: lib-memchr  lib-memchr.json
target_cli_tmp/debug/.fingerprint/once_cell-054da860beb5908e/: lib-once_cell  lib-once_cell.json
target_cli_tmp/debug/.fingerprint/parking_lot-19524b4ea4b4475d/: lib-parking_lot  lib-parking_lot.json
target_cli_tmp/debug/.fingerprint/parking_lot_core-031654afa6d86a0d/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_cli_tmp/debug/.fingerprint/parking_lot_core-725909c6b6e4f2ab/: build-script-build-script-build  build-script-build-script-build.json
target_cli_tmp/debug/.fingerprint/pin-project-lite-4995e84f4c26d400/: lib-pin_project_lite  lib-pin_project_lite.json
target_cli_tmp/debug/.fingerprint/pin-utils-3e0716c45818990c/: lib-pin_utils  lib-pin_utils.json
target_cli_tmp/debug/.fingerprint/proc-macro2-353dee8b9c2b3963/: lib-proc_macro2  lib-proc_macro2.json
target_cli_tmp/debug/.fingerprint/proc-macro2-5cd967b54f551e19/: build-script-build-script-build  build-script-build-script-build.json
target_cli_tmp/debug/.fingerprint/proc-macro2-9bcc2ec999529a08/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_cli_tmp/debug/.fingerprint/quote-2d7e6feb1b41dc8d/: build-script-build-script-build  build-script-build-script-build.json
target_cli_tmp/debug/.fingerprint/quote-74781df1da162d30/: lib-quote  lib-quote.json
target_cli_tmp/debug/.fingerprint/quote-bb5135da8c3bd34a/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_cli_tmp/debug/.fingerprint/scopeguard-866349466e94c7b4/: lib-scopeguard  lib-scopeguard.json
target_cli_tmp/debug/.fingerprint/serde_core-430b5a76e38ec6b8/: build-script-build-script-build  build-script-build-script-build.json
target_cli_tmp/debug/.fingerprint/serde_core-9fe489615dbc74be/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_cli_tmp/debug/.fingerprint/shlex-fbfa849da082bd04/: lib-shlex  lib-shlex.json
target_cli_tmp/debug/.fingerprint/slab-546ca62885d95a3b/: lib-slab  lib-slab.json
target_cli_tmp/debug/.fingerprint/smallvec-78f5c8cda21f5b51/: lib-smallvec  lib-smallvec.json
target_cli_tmp/debug/.fingerprint/stable_deref_trait-476faf65a36c9e1f/: lib-stable_deref_trait  lib-stable_deref_trait.json
target_cli_tmp/debug/.fingerprint/tracing-core-2bbd983f330740fc/: lib-tracing_core  lib-tracing_core.json
target_cli_tmp/debug/.fingerprint/typenum-02ba40d24fbd452f/: build-script-build-script-build  build-script-build-script-build.json
target_cli_tmp/debug/.fingerprint/typenum-a950c204c5d3ba3a/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_cli_tmp/debug/.fingerprint/unicode-ident-53aad7c1f01d5dec/: lib-unicode_ident  lib-unicode_ident.json
target_cli_tmp/debug/.fingerprint/version_check-9438501c2c7fd09e/: lib-version_check  lib-version_check.json
(+24 files in other folders)
