[workspace]
members = [
    "crates/pieskieo-core",
    "crates/pieskieo-server",
    "crates/pieskieo-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Kaede Team"]
license = "GPL-2.0-only"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
dirs = "5"
bytes = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
sqlparser = "0.45"
axum = { version = "0.7", features = ["macros", "json"] }
tower = "0.4"
roaring = "0.10"
rand = "0.8"
bincode = "1"
serde_cbor = "0.11"
async-trait = "0.1"
tempfile = "3"
rayon = "1.10"
hnsw_rs = "0.3.3"
