[package]
name = "kaededb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
bytes.workspace = true
parking_lot.workspace = true
uuid.workspace = true
sqlparser.workspace = true
roaring.workspace = true
rand.workspace = true
bincode.workspace = true
serde_cbor.workspace = true
async-trait.workspace = true
tempfile.workspace = true
rayon.workspace = true
hnsw_rs.workspace = true
sysinfo = "0.30"
