[package]
name = "pieskieo-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
pieskieo-core = { path = "../pieskieo-core" }
tokio = { workspace = true, features = ["full"] }
pieskieo-server = { path = "../pieskieo-server" }

[[bin]]
name = "pieskieo"
path = "src/main.rs"

