[package]
name = "pieskieo-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
pieskieo-core = { path = "../pieskieo-core" }
tokio = { workspace = true, features = ["full"] }
pieskieo-server = { path = "../pieskieo-server" }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
rustyline = "13"
serde = { workspace = true }

[[bin]]
name = "pieskieo"
path = "src/main.rs"

