[package]
name = "pieskieo-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
pieskieo-core = { path = "../pieskieo-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
uuid.workspace = true
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rand.workspace = true
