[project]
name = "pieskieo"
version = "0.1.0"
description = "Python SDK for the Pieskieo multimodal DB"
authors = [{name = "Pieskieo Team"}]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]
optional-dependencies = { test = ["pytest>=7.4"] }
readme = "README.md"
license = {text = "GPL-2.0-only"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
